获取请求参数

--- a/5.express/views/user.ejs
+++ b/5.express/views/user.ejs
@@ -5,11 +5,7 @@
     <title></title>
 </head>
 <body>
-<div>
-
-</div>
-<div>
-    <div><%=username%></div>
-</div>
+<%username%>
+<%age%>
 </body>
 </html>
